# DigitalPyHelloWorld

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
DigitalPyHelloWorld/components/health/: health_facade.py
DigitalPyHelloWorld/components/health/base/: __init__.py  health_action_mapper.py  health_domain.py
DigitalPyHelloWorld/components/health/configuration/: external_action_mapping.ini  health_constants.py  logging.conf  manifest.ini
DigitalPyHelloWorld/components/health/configuration/model_definitions/: Contact.json  Health.json  HealthClasses.json
DigitalPyHelloWorld/components/health/controller/: health_management_controller.py  health_persistence_controller.py
DigitalPyHelloWorld/components/health/domain/builder/: health_builder.py
DigitalPyHelloWorld/components/health/persistence/: __init__.py  health.db  health.py  health_base.py
DigitalPyHelloWorld/components/hello_world/: hello_world_facade.py
DigitalPyHelloWorld/components/hello_world/base/: __init__.py  hello_world_action_mapper.py  hello_world_domain.py
DigitalPyHelloWorld/components/hello_world/configuration/: external_action_mapping.ini  hello_world_constants.py  logging.conf  manifest.ini
DigitalPyHelloWorld/components/hello_world/controller/: connection_controller.py  hello_controller.py
DigitalPyHelloWorld/components/hello_world/service/: hello_service.py
DigitalPyHelloWorld/configuration/: dp_hello_world_configuration.ini
DigitalPyHelloWorld/services/: DPHelloWorld.py  api_service.py
OpenAPI/: Health_openapi3_0.yaml
(+6 files in other folders)
