[tool.poetry]
authors = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
readme = "README.md"
name = "DigitalPyHelloWorld"
version = "0.0.1"
description = "A Hello World Application For DigitalPy"

[tool.poetry.dependencies]
DigitalPy = "^0.3.13.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
