[tool.poetry]
authors = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
readme = "README.md"
name = "DigitalPyHelloWorld"
version = "0.0.1"
description = "A Hello World Application For DigitalPy"

[tool.poetry.dependencies]
python = "^3.10"
DigitalPy = "^0.3.13.7"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
DigitalPy = { path = "C:\\Users\\Natha Paquette\\work\\DigitalPy", develop=true }

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
